# gmail-automation

./: .env.example  .gitignore  .ruff.toml  Makefile  README.md  gmail_automation.db  noxfile.py  pyproject.toml  rules.json
.github/workflows/: ci.yaml
config/: logging.yaml  rules.json
docs/: api.md  configuration.md  setup.md
scripts/: fetch_emails.py  process_rules.py  setup_db.py
src/gmail_automation/: __init__.py  main.py
src/gmail_automation/auth/: gmail_auth.py
src/gmail_automation/config/: __init__.py  settings.py
src/gmail_automation/database/: __init__.py  connection.py  migrations  models.py
src/gmail_automation/gmail/: __init__.py  client.py  fetcher.py
src/gmail_automation/logging/: __init__.py  config.py
src/gmail_automation/rules/: __init__.py  actions.py  engine.py  models.py
src/gmail_automation/utils/: helpers.py
tests/: conftest.py  test_rules.py
tests/fixtures/: sample_emails.json  sample_rules.json
tests/integration/: test_api_integration.py  test_full_flow.py
tests/unit/: test_actions.py  test_auth.py  test_database.py  test_gmail.py  test_helpers.py  test_models.py  test_rules.py
