[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gmail-automation"
version = "0.1.0"
description = "Gmail automation with rule-based email processing"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "google-api-python-client>=2.100.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.4.0",
    "python-dotenv>=1.0.0",
    "ruff",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[tool.ruff]
line-length = 88
target-version = "py39"
exclude = ["tests/*"]

[tool.ruff.lint]
select = ["E", "F", "I"]